@@ -866,7 +866,7 @@
 				CLANG_ENABLE_MODULES = YES;
 				CODE_SIGN_ENTITLEMENTS = uSurf/uSurf.entitlements;
 				CODE_SIGN_STYLE = Automatic;
-				CURRENT_PROJECT_VERSION = 6.4.1;
+				CURRENT_PROJECT_VERSION = 6.4.2;
 				DEVELOPMENT_TEAM = MCRTE5CC2K;
 				INFOPLIST_FILE = uSurf/Info.plist;
 				IPHONEOS_DEPLOYMENT_TARGET = 9.0;
@@ -892,7 +892,7 @@
 				CLANG_ENABLE_MODULES = YES;
 				CODE_SIGN_ENTITLEMENTS = uSurf/uSurf.entitlements;
 				CODE_SIGN_STYLE = Automatic;
-				CURRENT_PROJECT_VERSION = 6.4.1;
+				CURRENT_PROJECT_VERSION = 6.4.2;
 				DEVELOPMENT_TEAM = MCRTE5CC2K;
 				INFOPLIST_FILE = uSurf/Info.plist;
 				IPHONEOS_DEPLOYMENT_TARGET = 9.0;
