@@ -2,6 +2,7 @@
 - Snowfall is dynamic! Snow will show and disappear based on months, no more updating the app for snow!
 - On newer iOS Versions (13+) internet information will use an improved system, allowing for less wait time.
 - Native iOS 15 Support
+- Note: App transparency - Google Ad Mob requests tracking to better serve ads to you but is completely optional and can be changed anytime in the settings. uApps does not track your data between apps. 
 
 6.4:
 - Support for iOS 14
